--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   curved_navigation_bar: ^1.0.1
   provider: ^6.0.0
+  easy_gradient_text: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
