--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   curved_navigation_bar: ^1.0.1
   provider: ^6.0.0
   easy_gradient_text: ^1.0.0
+  google_maps_flutter: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
