--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.0.0
   easy_gradient_text: ^1.0.0
   google_maps_flutter: ^2.0.1
+  location: ^4.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
