--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_dating_cdcnpm">
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="flutter_dating_cdcnpm"
+        android:label="DWMe"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBat3FoEbEP7yL7DOCQGmTP6rG6U_WQpLY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
