--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   easy_gradient_text: ^1.0.0
   google_maps_flutter: ^2.0.1
   location: ^4.3.0
+  hexcolor: ^2.0.4
+  url_launcher: ^6.0.4
+  web_scraper: ^0.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
